--- a/index.html
+++ b/index.html
@@ -3,35 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Options Page</title>
+    <link rel="stylesheet" href="styles3.css">
+    <script>
+        function toggleMenu() {
+            document.getElementById("menu").classList.toggle("active");
+        }
+    </script>
 </head>
 <body>
+
+    <!-- Hamburger Menu -->
+    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+
+    <!-- Sidebar Menu -->
+    <div id="menu" class="sidebar">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="index.html">Logout</a></li>
+        </ul>
+    </div>
+  
+    
     <div class="container">
-        <!-- Logo -->
-        <div class="logo">
-            <img src="find.webp" alt="Logo">
-        </div>
+        <h1>What are you looking for?</h1>
 
-        <!-- Sign In Form -->
-        <form id="signInForm">
-            <h2>Sign In</h2>
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" required>
-            </div>
-            <button type="submit">Sign In</button>
-            <a href="forgetpassword.html" class="forgot-password">Forgot Password?</a>
-        </form>
+        <div class="options">
+            <a href="children.html" class="option-card">
+                <img src="children's.jpeg" alt="Children">
+                <h3>Children</h3>
+            </a>
 
-        <!-- Sign Up Button -->
-        <div class="signup-section">
-            <p>Don't have an account? <a href="sign_up.html" id="signUpButton">Sign Up</a></p>
+            <a href="car.html" class="option-card">
+                <img src="cars.jpeg" alt="Car">
+                <h3>Car</h3>
+            </a>
+
+            <a href="phone.html" class="option-card">
+                <img src="phones.jpeg" alt="Phone">
+                <h3>Phone</h3>
+            </a>
         </div>
     </div>
+
 </body>
 </html>
